# sway-miracast

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile.cross  LICENSE  P2P_TEST_RESULTS.md  README.md  TEST_RESULTS.md  cliff.toml  install.sh  justfile  plan.md  run_test.sh  test_cargo.toml  test_detailed_p2p_verification.sh  test_miracast.sh  test_now.sh  test_p2p_functionality.sh
.ci/: PKGBUILD-bin.j2  PKGBUILD.j2  generate-pkgbuild.rh  generate-pkgbuild.sh  release.sh
.github/workflows/: aur-publish.yml  auto-tag.yaml  pre-commit.yml  rust.yml  stale.yml
.opencode/: package-lock.json  package.json
.opencode/skills/protocol-debug/: SKILL.md
.opencode/skills/release/: SKILL.md
crates/: test.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/capture/: Cargo.toml
crates/capture/examples/: screen_mirror.rs  snap.rs
crates/capture/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/examples/: debug_rtsp.rs
crates/cli/src/: lib.rs  main.rs  tests.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  tests.rs
crates/daemon/tests/: integration_real.rs  session_simulation.rs
crates/doctor/: Cargo.toml
crates/doctor/examples/: check_system.rs
crates/doctor/src/: lib.rs
crates/net/: Cargo.toml  test_cargo_build.rs
crates/net/examples/: discover_and_connect.rs
crates/net/src/: lib.rs  lib.rs.backup
crates/net/tests/: network_tests.rs
crates/rtsp/: Cargo.toml
crates/rtsp/examples/: basic_server.rs  mock_sink_server.rs
crates/rtsp/src/: lib.rs
crates/rtsp/tests/: e2e_tests.rs  integration_tests.rs  mock_lg_tv.rs  mock_sink_server.rs  protocol_tests.rs  spec_compliance.rs
crates/stream/: Cargo.toml
crates/stream/src/: lib.rs  test_pattern.rs  test_pattern_tests.rs
crates/stream/tests/: codec_tests.rs
docs/: HDCP_TEST_VECTORS.md  INTEGRATION_TESTS.md  MIRACAST_TEST_SCENARIOS.md  TESTING.md  architecture.md  milestones.md  protocol.md  test-matrix.md  wfd-gap-analysis.md  workflows.md
scripts/: analyze-pcap.sh  capture-hdcp-live.sh  capture-p2p.sh  capture-protocols.sh  capture-rtsp-live.sh  capture-verbose.sh  check-streaming.sh  dev-env.sh  run-dummy-sink.sh  streaming-status.sh  test-real-system.sh  test-system.sh  test-validation.sh
tests/: integration_daemon_flow.rs  integration_doctor_net.rs  integration_real.rs  integration_rtsp_stream.rs
tests/common/: mod.rs  system_utils.rs
