[workspace]
members = [
    "crates/doctor",
    "crates/capture",
    "crates/stream",
    "crates/net",
    "crates/rtsp",
    "crates/daemon",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["swaybeam contributors"]
repository = "https://github.com/forkline/swaybeam"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
# Note: tokio-util does not have a top-level sync feature, the features are io, codec, etc.
tokio-util = { version = "0.7" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
zbus = { version = "4", features = ["tokio"] }
rand = "0.8"
parking_lot = "0.12"

# PipeWire
pipewire = "0.9"
libspa = "0.9"

# GStreamer
gstreamer = "0.25"
gstreamer-video = "0.25"
gstreamer-rtp = "0.25"
gstreamer-app = "0.25"
gstreamer-audio = "0.25"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zvariant = "4"

# Async
futures-util = "0.3"
