[package]
name = "miracast-capture"
version.workspace = true
edition.workspace = true

[dependencies]
zbus = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
zvariant = { workspace = true }
pipewire = { workspace = true }
libspa = { workspace = true }

[features]
default = ["pipewire_support"]
pipewire_support = []
mock = []  # For testing without hardware
