[package]
name = "swaybeam-capture"
version.workspace = true
edition.workspace = true

[dependencies]
zbus = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
zvariant = { workspace = true, optional = true }
libc = "0.2"

[features]
default = []
real_portal = ["dep:zbus", "dep:zvariant"]
