[package]
name = "swaybeam-capture"
version.workspace = true
edition.workspace = true

[dependencies]
zbus = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
libc = "0.2"
pipewire = { workspace = true, optional = true }
libspa = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
env_logger = "0.11"
anyhow = { workspace = true }

[[example]]
name = "snap"
required-features = ["real_portal"]

[features]
default = []
real_portal = ["dep:zbus", "dep:pipewire", "dep:libspa", "dep:futures-util", "dep:tokio-stream", "dep:serde"]
