[package]
name = "miracast-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "miracast"
path = "src/main.rs"

[dependencies]
miracast-daemon = { path = "../daemon" }
miracast-net = { path = "../net" }
miracast-rtsp = { path = "../rtsp" }
miracast-doctor = { path = "../doctor" }
miracast-capture = { path = "../capture" }
miracast-stream = { path = "../stream" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
tabled = "0.15"
serde_json = { workspace = true }
