[package]
name = "swaybeam-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "swaybeam"
path = "src/main.rs"

[dependencies]
swaybeam-daemon = { path = "../daemon" }
swaybeam-net = { path = "../net" }
swaybeam-rtsp = { path = "../rtsp" }
swaybeam-doctor = { path = "../doctor" }
swaybeam-capture = { path = "../capture" }
swaybeam-stream = { path = "../stream" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
tabled = "0.15"
serde_json = { workspace = true }
