[package]
name = "swaybeam-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "swaybeam"
path = "src/main.rs"

[[bin]]
name = "validate-rtsp"
path = "src/bin/validate-rtsp.rs"

[[bin]]
name = "validate-wfd"
path = "src/bin/validate-wfd.rs"

[[bin]]
name = "diagnose-session"
path = "src/bin/diagnose-session.rs"

[dependencies]
swaybeam-daemon = { path = "../daemon" }
swaybeam-net = { path = "../net" }
swaybeam-rtsp = { path = "../rtsp" }
swaybeam-doctor = { path = "../doctor" }
swaybeam-capture = { path = "../capture" }
swaybeam-stream = { path = "../stream" }
swaybeam-external = { path = "../external" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
tabled = "0.20"
serde = { workspace = true }
serde_json = { workspace = true }
regex-lite = "0.1"
