[package]
name = "swaybeam-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
swaybeam-doctor = { path = "../doctor" }
swaybeam-capture = { path = "../capture" }
swaybeam-stream = { path = "../stream" }
swaybeam-net = { path = "../net" }
swaybeam-rtsp = { path = "../rtsp" }
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time", "signal"] }
parking_lot.workspace = true
gstreamer.workspace = true

[dev-dependencies]
pipewire.workspace = true
zbus.workspace = true
