[package]
name = "swaybeam-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
swaybeam-doctor = { path = "../doctor" }
swaybeam-capture = { path = "../capture", features = ["real_portal"] }
swaybeam-stream = { path = "../stream" }
swaybeam-net = { path = "../net" }
swaybeam-rtsp = { path = "../rtsp" }
swaybeam-audio = { path = "../audio" }
swaybeam-external = { path = "../external" }
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time", "signal"] }
parking_lot.workspace = true
gstreamer.workspace = true
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
rand.workspace = true
rand_core = "0.6"
rsa = { version = "0.9", features = ["sha2", "sha1"] }
sha1 = "0.10"
sha2 = "0.10"

[dev-dependencies]
pipewire.workspace = true
zbus.workspace = true
