[package]
name = "swaybeam-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
swaybeam-doctor = { path = "../doctor" }
swaybeam-capture = { path = "../capture", features = ["real_portal"] }
swaybeam-stream = { path = "../stream" }
swaybeam-net = { path = "../net" }
swaybeam-rtsp = { path = "../rtsp" }
swaybeam-audio = { path = "../audio" }
swaybeam-external = { path = "../external" }
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time", "signal"] }
parking_lot.workspace = true
gstreamer.workspace = true
aes = "0.8"
ctr = "0.9"
digest = "0.11"
hmac = "0.13"
rand.workspace = true
rsa = { version = "0.9", features = ["sha1"] }
sha1 = "0.11"
sha2 = "0.11"

[dev-dependencies]
pipewire.workspace = true
zbus.workspace = true
