[package]
name = "miracast-rtsp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3" }
tokio.workspace = true
parking_lot = "0.12"
rand = "0.8"

[[bin]]
name = "miracast_rtsp_server"
path = "src/bin/server.rs"