[package]
name = "miracast-rtsp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "miracast_rtsp_server"
path = "src/bin/server.rs"
