[package]
name = "swaybeam-stream"
version.workspace = true
edition.workspace = true

[dependencies]
gstreamer = { workspace = true }
gstreamer-video = { workspace = true }
gstreamer-rtp = { workspace = true }
gstreamer-app = { workspace = true }
gstreamer-audio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
swaybeam-capture = { path = "../capture" }
